test/classes/deitz/inherit-class-record/inherit_mod2.good
inherit_mod2.chpl:17: In function 'foo':
inherit_mod2.chpl:18: error: unresolved call 'C.x'
inherit_mod2.chpl:4: note: this candidate did not match: D1.x
inherit_mod2.chpl:18: note: because method call receiver with type 'borrowed C'
inherit_mod2.chpl:4: note: is passed to formal 'this: borrowed D1'
inherit_mod2.chpl:8: note: candidates are: D2.x
